# oar-ocr

./: Cargo.toml
src/core/inference/: mod.rs  ort_infer_config.rs  ort_infer_execution.rs
