[package]
name = "oar-ocr"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Wang Xin <xinwang614@gmail.com>"]
description = "A comprehensive OCR library built in Rust with ONNX Runtime for efficient inference"
repository = "https://github.com/greatv/oar-ocr"
homepage = "https://github.com/greatv/oar-ocr"
readme = "README.md"
keywords = [
    "ocr",
    "onnx",
    "computer-vision",
    "text-recognition",
    "machine-learning",
]
categories = ["computer-vision", "science"]

[features]
default = ["download-binaries"]
visualization = ["dep:ab_glyph"]
# Vision-Language (VL) support via Candle
vl = ["dep:candle-core", "dep:candle-nn"]
# ONNX Runtime execution provider features
# When `vl` is also enabled, this additionally turns on Candle's CUDA backend.
cuda = ["ort/cuda", "candle-core?/cuda", "candle-nn?/cuda"]
tensorrt = ["ort/tensorrt"]
directml = ["ort/directml"]
coreml = ["ort/coreml"]
webgpu = ["ort/webgpu"]
openvino = ["ort/openvino"]
# Auto-download ONNX Runtime binaries during build (enabled by default).
# Set ORT_LIB_LOCATION to use a custom installation (skips download).
# Use --no-default-features for offline/enterprise environments.
download-binaries = ["ort/download-binaries", "ort/tls-rustls"]

[dependencies]
oar-ocr-derive = { path = "oar-ocr-derive" }
image = "0.25.6"
imageproc = "0.25.0"
itertools = "0.14"
once_cell = "1.19"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.9"
ort = { git = "https://github.com/pykeio/ort.git", branch = "main", default-features = false, features = ["std", "ndarray", "tracing", "copy-dylibs"] }
ndarray = "0.17"
nalgebra = "0.34"
rayon = "1.8"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ab_glyph = { version = "0.2", optional = true }
tokenizers = { version = "0.22", default-features = false, features = ["progressbar", "onig"] }
clipper2 = "0.5.3"
candle-core = { version = "0.9.2-alpha.2", optional = true }
candle-nn = { version = "0.9.2-alpha.2", optional = true }
html-escape = "0.2"

[dev-dependencies]
clap = { version = "4.5.42", features = ["derive"] }
tempfile = "3.19"
